# unnamed-web-lang

./: .gitignore  Cargo.toml  LANGUAGE.md  README.md  dump.dom  fixture.dom  main.dom  main.js  rustfmt.toml
codegen/: Cargo.toml
codegen/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs  unique_name.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  lib.rs
data_structures/: Cargo.toml
data_structures/src/: arena.rs  control_flow_graph.rs  lib.rs  module_graph.rs  scope_map.rs
diagnostics/: Cargo.toml
diagnostics/src/: diagnostics.rs  error.rs  lib.rs
docs/: ARCHITECTURE.md  COMPONENTS.md  compilation.md  design.md
fixture/: Main.dom  Math.dom  bar.dom  foo.dom  main.dom.js  math.dom  styles.dom
fixture/baz/: qux.dom
fixture/utils/: Network.dom  UtilMain.dom
fixtures/: Cargo.toml  typeahead.dan
fixtures/files/: list.dan  main.dan  math.dom  std.dan
fixtures/src/: main.rs
fuzzer/: Cargo.toml
fuzzer/src/: code_fuzz.rs  lib.rs
hir/: Cargo.toml
hir/src/: hir.rs  lib.rs  unique_name.rs  visit.rs
hir/src/snapshots/: hir__control_flow_graph_tests__basic.snap  hir__control_flow_graph_tests__many.snap  (+1 more)
lexer/: Cargo.toml
lexer/benches/: bench_lexer.rs
lexer/src/: lexer.rs  lib.rs  reader.rs
log/: Cargo.toml
log/src/: lib.rs
lowering/: Cargo.toml
lowering/src/: lib.rs  lower.rs
lowering/src/snapshots/: lowering__cfg__double.snap
lowering_new/: Cargo.toml
lsp/: package.json  webscript-configuration.json
lsp/client/: tsconfig.json
lsp/src/: extension.ts  lsp.rs  main.rs
lsp/syntaxes/: webscript.tmLanguage.json
parser/: Cargo.toml
parser/src/: lib.rs  parser.rs  test_utils.rs
parser/src/inputs/: control_flow.dan  function_simple.dan  trailing_closures.dan
parser/src/snapshots/: parser__tests__expr_array.snap  parser__tests__expr_boolean_false.snap  parser__tests__expr_boolean_true.snap  parser__tests__expr_float.snap  parser__tests__expr_integer.snap  parser__tests__expr_long_float.snap  parser__tests__expr_object.snap  parser__tests__expr_stmt-2.snap  parser__tests__expr_stmt-3.snap  parser__tests__expr_stmt.snap  parser__tests__expr_string.snap  parser__tests__fixture_control_flow.snap  parser__tests__fixture_control_flow.snap.new  parser__tests__fixture_function_simple.snap  parser__tests__fixture_function_simple.snap.new  parser__tests__fixture_trailing_closure_control_flow.snap  parser__tests__function_simple_fixture.snap  parser__tests__stmt_ident_names.snap  parser__tests__stmt_numbers.snap
scripts/: fixtures.sh
source/src/: diagnostics.rs  filesystem.rs  lib.rs  span.rs
src/: SEMANTICS.md  ast.rs  char.rs  context.rs  error.rs  evaluate.rs  lexer.rs  macros.rs  main.rs  parser.rs  pos.rs  reader.rs  result.rs  str.rs  symbol.rs  token.rs  visitor.rs  word.rs
src/ast/: expr.rs  mod.rs  stmt.rs
src/codegen/: Cargo.toml
src/codegen/src/: codegen.rs  lib.rs
src/compiler/: Cargo.toml
src/compiler/src/: codegen.rs  compiler.rs  ctx.rs  incremental.rs  ir.rs  lib.rs  lowering.rs  queries.rs  scope.rs  session.rs
src/compiler/src/context/: context.rs
src/compiler/src/passes/: codegen_pass.rs  dce.rs  dep_graph.rs  early_tycheck.rs  lowering.rs  mod.rs  name_resolution.rs
src/data_structures/: Cargo.toml
src/data_structures/src/: arena.rs  control_flow_graph.rs  lib.rs  module_graph.rs  scope_map.rs
src/diagnostics/: Cargo.toml
src/diagnostics/src/: diagnostics.rs  lib.rs
src/fuzzer/: Cargo.toml
src/fuzzer/src/: code_fuzz.rs  lib.rs
src/hir/: Cargo.toml
src/hir/src/: control_flow_graph.rs  hir.rs  lib.rs  lower.rs  module_graph.rs  scope.rs
src/hir/src/snapshots/: hir__control_flow_graph_tests__kitchen_sink_branching.snap  hir__control_flow_graph_tests__return_from_if_true.snap  hir__control_flow_graph_tests__trailing_multi_stmt_basic.snap  hir__control_flow_graph_tests__trailing_single_stmt_basic.snap
src/ir/: cfg.rs  mod.rs  scope.rs
src/lexer/: Cargo.toml  error.rs  mod.rs
src/lexer/src/: lexer.rs  reader.rs  result.rs
src/lowering/: Cargo.toml
src/lowering/src/: lib.rs  lower.rs
src/lowering/src/lowering/src/snapshots/: lowering__cfg__basic.snap.new  lowering__cfg__double.snap.new  lowering__cfg__empty.snap.new  lowering__cfg__kitchen_sink_branching.snap.new  lowering__cfg__leading_multi_stmt_basic.snap.new  lowering__cfg__leading_single_stmt_basic.snap.new  lowering__cfg__many.snap.new  lowering__cfg__return_from_if_true.snap.new  lowering__cfg__single.snap.new  lowering__cfg__trailing_multi_stmt_basic.snap.new  lowering__cfg__trailing_single_stmt_basic.snap.new
src/lowering/src/snapshots/: lowering__cfg__empty.snap  lowering__cfg__leading_multi_stmt_basic.snap  lowering__cfg__leading_single_stmt_basic.snap
src/lsp/: Cargo.toml
src/lsp/src/: lsp.rs
src/parser/: Cargo.toml  context.rs  decl.rs  expr.rs  mod.rs  stmt.rs
src/parser/src/: db.rs  lib.rs  parser.rs  test_utils.rs
src/parser/src/snapshots/: parser__tests__expr_stmt-4.snap
src/passes/: mod.rs  resolution.rs  templates.rs
src/session/: Cargo.toml
src/session/src/: ctx.rs  lib.rs
src/source/: Cargo.toml
src/source/src/: diagnostics.rs  files.rs  filesystem.rs  index.rs  lib.rs
src/syntax/: Cargo.toml
src/syntax/src/: ast.rs  lib.rs  precedence.rs  sess.rs  source_map.rs  symbol.rs  token.rs  ty.rs  visitor.rs
src/typecheck/: Cargo.toml  mod.rs
src/typecheck/src/: infer.rs  lib.rs  symbol_table.rs  ty_context.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  lib.rs  precedence.rs  symbol.rs  token.rs  ty.rs  visitor.rs
tests/: Cargo.toml
tests/src/parser/: mod.rs  parser_stmts_test.rs
tests/src/parser/fixtures/: expressions.dan  functions.dan  statements.dan
tests/src/parser/snapshots/: tests__parser__parser_stmts_test__tests__parser_tests@expressions.dan.snap  tests__parser__parser_stmts_test__tests__parser_tests@functions.dan.snap  tests__parser__parser_stmts_test__tests__parser_tests@statements.dan.snap
ty/: Cargo.toml
ty/src/: effects.rs  lib.rs  ty.rs
typecheck/: Cargo.toml
typecheck/src/: lib.rs  type_arena.rs  type_check.rs  type_check_old.rs  type_context.rs
(+1 files in other folders)
