[package]
name = "syntax"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-parser = "0.2.3"
data_structures = { path = "../data_structures" }
diagnostics = { path = "../diagnostics" }
pretty = "0.5.2"
path-dedot = "1.1.13"
serde = { version = "1.0", features = ["derive"] }
source = { path = "../source" }

