[package]
name = "typecheck"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

[dependencies]
hir = { path = "../hir" }
source = { path = "../source" }
diagnostics = { path = "../diagnostics" }
data_structures = { path = "../data_structures" }
common = { path = "../common" }
syntax = { path = "../syntax" }
ty = { path = "../ty" }
log = "0.4"
internment = "0.3.12"
