[package]
name = "compiler"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
lexer = { path = "../lexer" }
syntax = { path = "../syntax" }
diagnostics = { path = "../diagnostics" }
typecheck = { path = "../typecheck" }
serde_json = "1.0.41"
bincode = "1.2.0"
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
