[package]
name = "compiler"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rustc-ap-rustc_data_structures = "631.0.0"
lowering = { path = "../lowering" }
fxhash = "0.2.1"
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
codegen = { path = "../codegen" }
log = { path = "../log" }
source = { path = "../source" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
lexer = { path = "../lexer" }
path-dedot = "1.1.13"
parser = { path = "../parser" }
petgraph = "0.4.13"
session = { path = "../session" }
syntax = { path = "../syntax" }
typecheck = { path = "../typecheck" }
