[package]
name = "data_structures"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edit-distance = "2.1.0"
fxhash = "0.2.1"
id-arena = "2.2.1"
insta = "0.13.1"
petgraph = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"