[package]
name = "diagnostics"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
