[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
rand = "0.7.3"
quickcheck_macros = "0.9.1"
quickcheck = "0.9.2"
source = { path = "../source" }
diagnostics = { path = "../diagnostics" }
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
petgraph = "0.5.0"
syntax = { path = "../syntax" }
parser = { path = "../parser" }