[package]
name = "hir"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
insta = "0.13.1"
cargo-insta = "0.13.0"

[dependencies]
rand = "0.7.3"
quickcheck_macros = "0.9.1"
edit-distance = "2.1.0"
quickcheck = "0.9.2"
data_structures = { path = "../data_structures" }
fxhash = "0.2.1"
notify = "4.0.13"
id-arena = "2.2.1"
rustc-hash = "1.0.1"
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
codegen = { path = "../codegen" }
session = { path = "../session" }
log = { path = "../log" }
source = { path = "../source" }
diagnostics = { path = "../diagnostics" }
generational-arena = { version = "0.2", features = ["serde"] }
petgraph = "0.5.0"
syntax = { path = "../syntax" }
parser = { path = "../parser" }