[package]
name = "lowering"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "0.13.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
edit-distance = "2.1.0"
data_structures = { path = "../data_structures" }
fxhash = "0.2.1"
id-arena = "2.2.1"
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
log = { path = "../log" }
source = { path = "../source" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
path-dedot = "1.1.13"
parser = { path = "../parser" }
petgraph = "0.4.13"
syntax = { path = "../syntax" }
