[package]
name = "lsp"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-lsp = "0.9.2"
lsp-server = "0.3.1"
lsp-types = "0.73.0"
serde_json = "1.0.50"
serde = { version = "1.0.83", features = ["derive"] }
compiler = { path = "../compiler" }
flexi_logger = "0.14.0"
log = "0.4.3"
source = { path = "../source" }
diagnostics = { path = "../diagnostics" }
