[package]
name = "session"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source = { path = "../source" }
data_structures = { path = "../data_structures" }
syntax = { path = "../syntax" }