[package]
name = "source"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.13"
hotwatch = "0.4.3"
relative-path = "1.0.0"
fxhash = "0.2.1"
salsa = "0.14.1"
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
