[package]
name = "source"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.13"
relative-path = "1.0.0"
fxhash = "0.2.1"
codespan = { version = "0.9.2", features = ["serialization"] }
codespan-reporting = "0.9.2"
crossbeam = "0.7.3"
id-arena = "2.2.1"
dashmap = "3.7.0"
serde = { version = "1.0", features = ["derive"] }
lsp-types = "0.73.0"