[package]
name = "syntax"
version = "0.1.0"
authors = ["Brandon Dail <brandondail@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diagnostics = { path = "../diagnostics" }
codespan = { version = "0.5.0", features = ["serialization"] }
codespan-reporting = "0.5.0"
pretty = "0.5.2"
serde = { version = "1.0", features = ["derive"] }

